Fix legend spacing; build v0.14

--- a/assets/chart.css
+++ b/assets/chart.css
@@ -41,7 +41,6 @@
   top: 0em;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 #logo {
@@ -59,6 +58,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  margin-top: 2rem;
 }
 
 #legend div {
